# SchedulerGroupBot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: __main__.py  dao.py  forms.py  middlewares.py  models.py  reminders.py  router.py  schedule.py
migrations/: 001_init.sql
src/app/: dao.py  forms.py  main.py  middlewares.py  models.py  router.py
src/tests/: test_lesson.py
tests/: test_lesson.py
